DogOrCat/k8s/frontend/nginx-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dogorcat
    type: frontend
  name: nginx-svc-node
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: dogorcat
    type: frontend
  type: NodePort
