DogOrCat/k8s/frontend/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dogorcat-ingress
  labels:
    app: dogorcat
    type: external
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: nginx-svc-node
          servicePort: 80
